infra/k8s/manifests/register/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oae-register
  namespace: oae
spec:
  selector:
    app: oae-register
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
